5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4081/executions/1601_1801.log
== TEST (2019-04-01 11:44:42) 
-- CODE:
objeto=("porta")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:02:15) 
-- CODE:
objeto=("porta")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:05:02) 
-- CODE:
objeto=("porta")
print("abra+porta*abra+porta*abra+porta*abra+porta")
-- OUTPUT:
abra+porta*abra+porta*abra+porta*abra+porta
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:05:37) 
-- CODE:
objeto=(input("porta")
print("abra+porta*abra+porta*abra+porta*abra+porta")
-- ERROR:
File "XXXX", line 2
    print("abra+porta*abra+porta*abra+porta*abra+porta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:06:07) 
-- CODE:
objeto=(input("porta")
print("abra+porta*abra+porta*abra+porta*abra+porta")
-- ERROR:
File "XXXX", line 2
    print("abra+porta*abra+porta*abra+porta*abra+porta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:06:56) 
-- CODE:
objeto=(input("porta")
print(round("abra+porta*, 4)
-- ERROR:
File "XXXX", line 2
    print(round("abra+porta*, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:07:02) 
-- CODE:
objeto=(input("porta")
print(round("abra+porta, 4)
-- ERROR:
File "XXXX", line 2
    print(round("abra+porta, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:07:36) 
-- CODE:
objeto=(input("porta")
print(round(abra+porta, 4)
-- ERROR:
File "XXXX", line 2
    print(round(abra+porta, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:07:36) 
-- CODE:
objeto=(input("porta")
print(round(abra+porta, 4)
-- ERROR:
File "XXXX", line 2
    print(round(abra+porta, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:07:36) 
-- CODE:
objeto=(input("porta")
print(round(abra+porta, 4)
-- ERROR:
File "XXXX", line 2
    print(round(abra+porta, 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:10:25) 
-- CODE:
objeto=(input("porta")
print("abra + objeto * abra + porta * abra + porta * abra + porta")
-- ERROR:
File "XXXX", line 2
    print("abra + objeto * abra + porta * abra + porta * abra + porta")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:10:46) 
-- CODE:
objeto=(input("porta")
print(abra + objeto * abra + porta * abra + porta * abra + porta)
-- ERROR:
File "XXXX", line 2
    print(abra + objeto * abra + porta * abra + porta * abra + porta)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:10:46) 
-- CODE:
objeto=(input("porta")
print(abra + objeto * abra + porta * abra + porta * abra + porta)
-- EXECUTION TIME:
0.202629
-- ERROR:
  File "/home/codebench/codes/1601/1801/main.py", line 2
    print(abra + objeto * abra + porta * abra + porta * abra + porta)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:11:38) 
-- CODE:
objeto=(input("porta")
print(abra + "objeto")
-- ERROR:
File "XXXX", line 2
    print(abra + "objeto")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:11:50) 
-- CODE:
objeto=(input("porta")
print(abra + "objeto"*)
-- ERROR:
File "XXXX", line 2
    print(abra + "objeto"*)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:12:59) 
-- CODE:
objeto=(input(porta, 4)
print(Abra + "objeto"*)
-- ERROR:
File "XXXX", line 2
    print(Abra + "objeto"*)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:12:59) 
-- CODE:
objeto=(input(porta, 4)
print(Abra + "objeto"*)
-- ERROR:
File "XXXX", line 2
    print(Abra + "objeto"*)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:14:08) 
-- CODE:
objeto=(input("porta")
repetiçoes(4)		  
print(Abra + "objeto"*)
-- ERROR:
File "XXXX", line 2
    repetiçoes(4)		  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:14:23) 
-- CODE:
objeto=(input("porta")
repetiçoes(4)		  
print(Abra + objeto)
-- ERROR:
File "XXXX", line 2
    repetiçoes(4)		  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:14:38) 
-- CODE:
objeto=(input("porta")
repetiçoes(4)		  
print("Abra + objeto")
-- ERROR:
File "XXXX", line 2
    repetiçoes(4)		  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:14:39) 
-- CODE:
objeto=(input("porta")
repetiçoes(4)		  
print("Abra + objeto")
-- EXECUTION TIME:
0.123669
-- ERROR:
  File "/home/codebench/codes/1601/1801/main.py", line 2
    repeti\xe7oes(4)		  
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:17:23) 
-- CODE:
objeto=(input("porta")
repetiçoes(4)		  
print(Abra + "porta")
-- ERROR:
File "XXXX", line 2
    repetiçoes(4)		  
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:18:03) 
-- CODE:
objeto=(input("porta")		  
print(Abra + "porta"*4)
-- ERROR:
File "XXXX", line 2
    print(Abra + "porta"*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:18:38) 
-- CODE:
nome_do_objeto= (input("porta")		  
print(Abra + "porta"*4)
-- ERROR:
File "XXXX", line 2
    print(Abra + "porta"*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:20:30) 
-- CODE:
nome_do_objeto= (input("porta")		  
print("Abra + porta"*4)
-- ERROR:
File "XXXX", line 2
    print("Abra + porta"*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:21:13) 
-- CODE:
nome_do_objeto= (input("porta")		  
print("Abra + nome_do_objeto"*4)
-- ERROR:
File "XXXX", line 2
    print("Abra + nome_do_objeto"*4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:21:22) 
-- CODE:
nome_do_objeto= (input("porta")		  
print("Abra + nome_do_objeto"*4)
-- EXECUTION TIME:
0.172974
-- ERROR:
  File "/home/codebench/codes/1601/1801/main.py", line 2
    print("Abra + nome_do_objeto"*4)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:22:39) 
-- CODE:
nome_do_objeto= (input("porta")		  
print("Abra + nome_do_objeto": 4)
-- ERROR:
File "XXXX", line 2
    print("Abra + nome_do_objeto": 4)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:09) 
-- CODE:
nome_do_objeto= (input("porta")		 
feitiço("Abra + nome_do_objeto")
print(Abra + nome_do_objeto)					  
-- ERROR:
File "XXXX", line 2
    feitiço("Abra + nome_do_objeto")
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:26) 
-- CODE:
nome_do_objeto= (input("porta")		 
feitiço(Abra + nome_do_objeto)
print(Abra + nome_do_objeto)					  
-- ERROR:
File "XXXX", line 2
    feitiço(Abra + nome_do_objeto)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:42) 
-- CODE:
nome_do_objeto= (input("porta")		 
feitiço(nome_do_objeto)
print(Abra + nome_do_objeto)					  
-- ERROR:
File "XXXX", line 2
    feitiço(nome_do_objeto)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:28:05) 
-- CODE:
nome_do_objeto= (input("porta")		 
feitiço(nome_do_objeto)
print("Abra + nome_do_objeto", 4)					  
-- ERROR:
File "XXXX", line 2
    feitiço(nome_do_objeto)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:29:43) 
-- CODE:
nomedoobjeto= (input("porta")		 
feitiço(nome_do_objeto)
print(int("Abra + nomedoobjeto", 4))					  
-- ERROR:
File "XXXX", line 2
    feitiço(nome_do_objeto)
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:29:48) 
-- CODE:
nomedoobjeto= (input("porta")		 
feitiço(nome_do_objeto)
print(int("Abra + nomedoobjeto", 4))					  
-- EXECUTION TIME:
0.131248
-- ERROR:
  File "/home/codebench/codes/1601/1801/main.py", line 2
    feiti\xe7o(nome_do_objeto)
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:30:23) 
-- CODE:
nomedoobjeto= (input("porta")		 
					  
-- ERROR:
File "XXXX", line 3
    
           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:30:34) 
-- CODE:
nomedoobjeto= (input("porta")		 					  
-- ERROR:
File "XXXX", line 2
    
                                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:31:14) 
-- CODE:
nomedoobjeto= int(input("porta")		 					  
-- ERROR:
File "XXXX", line 2
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:31:27) 
-- CODE:
nome_do_objeto= int(input("porta")		 					  
-- ERROR:
File "XXXX", line 2
    
                                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:14) 
-- CODE:
nome_do_feitiço= input("porta")
repetiçoes= int(input("quantidade de repetiçoes: ")
					 
						  
-- ERROR:
File "XXXX", line 5
    
            ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:33:27) 
-- CODE:
nome_do_feitiço= input("porta")
repetiçoes= int(input("quantidade de repetiçoes: ")					  
-- ERROR:
File "XXXX", line 3
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:34:16) 
-- CODE:
nome_do_feitiço= input("porta")
repetiçoes= int(input("numero de repetiçoes: ")					  
-- ERROR:
File "XXXX", line 3
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:34:43) 
-- CODE:
repetiçoes= int(input("numero de repetiçoes: ")					  
-- ERROR:
File "XXXX", line 2
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:35:41) 
-- CODE:
N= int(input("numero de repetiçoes: ")					  
-- ERROR:
File "XXXX", line 2
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:45:49) 
-- CODE:
palavra= input("objeto:")
repetiçoes=int(input("repetiçoes: ")
feiti1= "abra"
objeto=feiti1+palavra+" "
feitiço=repetiçoes * objeto
print(feitiço)										
-- EXECUTION TIME:
0.178437
-- ERROR:
  File "/home/codebench/codes/1601/1801/main.py", line 3
    feiti1= "abra"
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:45:54) 
-- CODE:
palavra= input("objeto:")
repetiçoes=int(input("repetiçoes: ")
feiti1= "abra"
objeto=feiti1+palavra+" "
feitiço=repetiçoes * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    feiti1= "abra"
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:46:14) 
-- CODE:
palavra= input("objeto:")
repetiçoes=int(input("repetiçoes: ")
feitiw= "abra"
objeto=feitiw+palavra+" "
feitiço=repetiçoes * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    feitiw= "abra"
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:47:16) 
-- CODE:
palavra= input("objeto:")
repetiçoes= int(input("repetiçoes: ")
feitiw= "abra"
objeto= feitiw + palavra + " "
feitiço= repetiçoes * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    feitiw= "abra"
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:47:32) 
-- CODE:
palavra= input("objeto: ")
repetiçoes= int(input("repetiçoes: ")
feitiw= "Abra"
objeto= feitiw + palavra + " "
feitiço= repetiçoes * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    feitiw= "Abra"
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:48:21) 
-- CODE:
palavra= input("objeto: ")
repetiçoes= int(input("repetiçoes: ")
feitiw= "Abra"
objeto= feitiw + palavra + " "
feitiço= repetiçoes * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    feitiw= "Abra"
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:49:00) 
-- CODE:
a= input("objeto: ")
b= int(input("repetiçoes: ")
c= "Abra"
objeto= c + a + " "
feitiço= b * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    c= "Abra"
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:49:06) 
-- CODE:
a= input("objeto: ")
b= int(input("repetiçoes: ")
c= "Abra"
objeto= c + a + " "
feitiço= b * objeto
print(feitiço)										
-- EXECUTION TIME:
0.156995
-- ERROR:
  File "/home/codebench/codes/1601/1801/main.py", line 3
    c= "Abra"
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:50:37) 
-- CODE:
palavra= input("objeto: porta")
repetiçoes= int(input("repetiçoes: 4")
magica= "Abra"
objeto= magica + palavra + " "
feitiço= repetiçoes * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    magica= "Abra"
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:50:54) 
-- CODE:
palavra= input("objeto: porta")
repetiçoes= int(input("repetiçoes: 4")
magica= ("Abra")
objeto= magica + palavra + " "
feitiço= repetiçoes * objeto
print(feitiço)										
-- ERROR:
File "XXXX", line 3
    magica= ("Abra")
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:43) 
-- CODE:
palavra= input("objeto: porta")
repetiçoes= int(input("repetiçoes: ")
										
-- ERROR:
File "XXXX", line 4
    
              ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:51:52) 
-- CODE:
palavra= input("objeto: porta")
repetiçoes= int(input("repetiçoes: ")										
-- ERROR:
File "XXXX", line 3
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:30) 
-- CODE:
palavra= input("objeto:")
repetiçoes= int(input("repetiçoes:")										
-- ERROR:
File "XXXX", line 3
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:52:43) 
-- CODE:
palavra= input("objeto:")
repetiçoes= int(input("repetiçoes:"))										
-- ERROR:
File "XXXX", line 3
    
                                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:55:12) 
-- CODE:
palavra= input("objeto:")
repetiçoes= int(input("repetiçoes:"))
feiti1="Abra"
feitiço=feiti1*palavra* " "
print(feitiço)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    feitiço=feiti1*palavra* " "
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:57:35) 
-- CODE:
palavra= input("objeto:")
repetiçoes= int(input("repetiçoes:"))
feiti1="Abra"
objeto=feiti1+palavra+ " "
feitiço=repetiçoes * objeto
print(feitiço)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:57:43) 
-- CODE:
palavra= input("objeto:")
repetiçoes= int(input("repetiçoes:"))
feiti1="Abra"
objeto=feiti1+palavra+ " "
feitiço=repetiçoes * objeto
print(feitiço)

-- EXECUTION TIME:
0.147935
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:58:11) 
-- CODE:
palavra= input("objeto:")
repetiçoes= int(input("repetiçoes:"))
feiti1= "Abra"
objeto= feiti1+palavra+ " "
feitiço= repetiçoes * objeto
print(feitiço)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:59:22) 
-- CODE:
A= input("objeto:")
B= int(input("repetiçoes:"))
C= "Abra"
objeto= C+A+ " "
feitiço= B * objeto
print(feitiço)

-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:59:47) 
-- CODE:
A= input("objeto:")
B= int(input("repetiçoes:"))
C= "Abra"
objeto= C+A+ " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.164398
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abracarro Abracarro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abracaixa
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:00:23) 
-- CODE:
A= input("objeto: ")
B= int(input("repetiçoes: "))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:01:51) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:01:51) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:01:52) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:01:52) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.210412
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:07:32) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.170464
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:12:25) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.165347
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:12:25) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.230788
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra caixa
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:12:28) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.129572
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:14:01) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.147401
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 18:15:29) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 18:15:30) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.134528
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:58:31) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.148173
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:26:27) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.1293
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 18:29:34) 
-- CODE:
A= input("objeto: porta")
B= int(input("repetiçoes: 4"))
C= "Abra "
objeto= C + A + " "
feitiço= B * objeto
print(feitiço)

-- EXECUTION TIME:
0.140679
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
